refactor : 자동차 이름에 대한 원시값 String을 CarName으로 포장